Update java version and markdown